Clean up unused dependencies